# pokequiz-react

./: .eslintrc.yml  .gitignore  LICENSE  README.md  asset-manifest.json  index.html  package-lock.json  package.json
etc/rank-match-pokemon-gen/: pokemon.json  pyproject.toml
etc/rank-match-pokemon-gen/rankmatchpokemongen/: main.py  model.py  pokeapi.py  pokemon_home.py
public/: index.html
src/: App.css  App.tsx
src/models/: pokemon.ts
src/resources/: pokemon.json  types.d.ts
static/css/: main.45a5f7dd.css  main.45a5f7dd.css.map  main.bbfe2e51.css  main.bbfe2e51.css.map
static/js/: 787.b0ef8395.chunk.js  787.b0ef8395.chunk.js.map  main.1538be0a.js  main.1538be0a.js.map  main.243fda44.js  main.243fda44.js.map  main.29475036.js  main.29475036.js.map  main.2a0c2803.js  main.2a0c2803.js.map  main.2d1b4a5f.js  main.2d1b4a5f.js.map  main.9679e244.js  main.9679e244.js.map  main.a927b820.js  main.a927b820.js.map  main.c12c3ea8.js  main.c12c3ea8.js.map  main.c36f43a1.js  main.c36f43a1.js.map  main.f0889822.js  main.f0889822.js.map
