[tool.poetry]
name = "rank-match-pokemon-gen"
version = "0.1.0"
description = "Find Pokémons which are frequently used in rank matches."
authors = ["Yu Mochizuki <ymoch.dev@gmail.com>"]
packages = [
  { include = "rankmatchpokemongen" },
]

[tool.poetry.scripts]
rank-match-pokemon-gen = "rankmatchpokemongen.main:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-flake8 = "^1.1.1"
pytest-mypy = "^0.9.1"
types-requests = "^2.27.29"
black = "^22.3.0"

[tool.pytest.ini_options]
testpaths = [
  "rankmatchpokemongen",
]
addopts = [
  "--flake8",
  "--mypy",
  "--mypy-ignore-missing-imports",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
